# delimit

./: .gitmodules  CMakeLists.txt  Delimit.files  Delimit.includes  LICENSE.md  README.md
data/: delimit.desktop  settings.json
data/schemes/: delimit.xml
data/settings/: default.json
data/ui/: delimit.glade
src/: CMakeLists.txt  application.cpp  application.h  awesome_bar.cpp  awesome_bar.h  base  buffer.cpp  buffer.h  directory_watcher.cpp  directory_watcher.h  document_view.cpp  document_view.h  find_bar.cpp  find_bar.h  frame.cpp  frame.h  main.cpp  project_info.cpp  project_info.h  rank.cpp  rank.h  search.cpp  search.h  settings.h  utils.cpp  utils.h  window.cpp  window.h
src/autocomplete/: base.cpp  base.h  datastore.cpp  datastore.h  indexer.cpp  indexer.h  provider.cpp  provider.h
src/autocomplete/parsers/: plain.cpp  plain.h  python.cpp  python.h
src/coverage/: coverage.cpp  coverage.h
src/gtk/: open_files_list.cpp  open_files_list.h
src/linter/: linter.cpp  linter.h
src/search/: search_thread.h
src/utils/: base_directory.cpp  base_directory.h  bfs.h  files.h  indentation.cpp  indentation.h  jsonic.cpp  jsonic.h  kazlog.cpp  kazlog.h  regex.cpp  regex.h  sigc_lambda.h  unicode.cpp  unicode.h
tests/: CMakeLists.txt  test_awesome.h  test_bfs.h  test_project_info.h  test_python.py  test_python_parser.h
