
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

FILE(GLOB_RECURSE TEST_FILES *.h)

ADD_CUSTOM_COMMAND(
    OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
    COMMAND ${KAZTEST_EXECUTABLE} ${TEST_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
    DEPENDS ${TEST_FILES}
)

set(
    DELIMIT_SOURCES
    ${CMAKE_SOURCE_DIR}/src/autocomplete/parsers/python.cpp
)


ADD_EXECUTABLE(tests ${TEST_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp ${DELIMIT_SOURCES})

ADD_TEST(suite tests)
